--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<meta property="og:title" content="Bennet Chloe"/>
 			<meta property="og:type" content="Curriculum vitae"/>			
 			<meta property="og:image" content="IMG/uba_general.jpg"/>
-			<meta property="og:description" content="Curriculum vitae de Rosa Souza">
+			<meta property="og:description" content="Curriculum vitae de Chloe"/>
 
 			<link rel="icon" href="IMG/icono.ico" type="image/ico"/>
 			
